Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88374

QTextDocument::toHtml: nested lists (ul, ol) not nested in output

    XMLWordPrintable

Details

    • 72a5151403f107c445e20cf548ca2e7309c88ce7 (qt/qtbase/dev) 4f5c8fecaca5d875b19bc62fd8d8264f16eaedcd (qt/qtbase/6.1) 716303c35a537bc38ddbdfd80ba23a884abf6978 (qt/tqtc-qtbase/5.15)

    Description

      Nested lists in QTextDocument don't always appear as nested in QTextDocument::toHtml output.

      Sample:

       

        <ul>
          <li>item-1</li>
          <li>item-2
          <ul>
            <li>item-2.1</li>
          </ul>
          </li>
        </ul>
      
      

      which would appear as something along the lines in QTextDocument::toHtml output:

       

      <ul>
        <li>item-1</li>
        <li>item-2</li>
      </ul>
      <ul>
        <li>item-2.1</li>
      </ul> 
      

      NOTE: If there was another list item before the closing tag of the first ul in the sample html above, the problem would not occur.

       

       

      Steps to reproduce the issue:

      1. Run the attached project
      2. Compare the output with the input html

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            miikapernu Miika Pernu
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes